# singbot

./: CMakeLists.txt  demo.cpp  robo-guile.c  robotest.c  singbot.scm
cmake/: FindGuile.cmake  FindNNPACK.cmake
include/: RaspiYolo.hpp
include/vision/: RaspiYolo.hpp  SingBotVision.hpp
lib/: PI_GPIO.c  RaspiYolo.cpp  robocmd.c
lib/darknet/: parser.c
lib/vision/: RaspiYolo.cpp  SingBotVision.cpp
robot/: bot-cntrl.scm
