cmake_minimum_required(VERSION 3.0)
project(singbot)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}" -g")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
find_package(Guile REQUIRED)
include_directories(${GUILE_INCLUDE_DIRS})
add_library(singbot SHARED robo-guile.c)
add_executable(robo-test robotest.c)
target_link_libraries(singbot ${GUILE_LIBRARY})
